<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2009, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- The name of the application. -->
    <string name="app_name">Walk MSU</string>
    
    <!-- The label for the search button on the first screen -->
    <string name="search_button_label">Search</string>

    <!-- The label for the list button on the first screen -->
    <string name="list_button_label">Building List</string>
    
    <!-- The label for the about button on the first screen -->
	<string name="about_button_label">About</string>
    
    <!-- The label for the search results for this app (see searchable.xml for more details). -->
    <string name="search_label">Destinations</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of words</string>

    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Welcome to Walk MSU!</string>

    <!-- Shown above search results when we receive a search request. -->
    <string name="search_results">Search results for \'<xliff:g id="string">%s</xliff:g>\': </string>
    
    <!--  Label for the image of the building. -->
    <string name="image_label">Building Image</string>
    
    <!-- Label for the "go" button -->
    <string name="button_label">Go</string>
    
    <!-- Title of the About page -->
    <string name="about_title">About</string>
    
    <!-- Back button on the About page -->
    <string name="about_back">Back</string>

    <!--Sound button on the Map Display-->
    <string name="sound">Sound</string>

    <!--For Routing List Fragment-->
    <string name="actionBar_direction">Get Directions</string>

    <!--Following for routing dialog-->
    <string name="geocode_url">https://fis.ipf.msu.edu/agswayfinding/rest/services/RoutingService/NAServer/PedRoute</string>

    <!--To pull all intersections from server -->
    <string name="intersection_url">https://fis.ipf.msu.edu/agswayfinding/rest/services/WayfindingResources/MapServer/6</string>

</resources>
