<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
            android:id="@+id/textField"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_instructions"/>
    <ImageView 
        	android:id="@+id/welcome_photo"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/image_label"/>    
    <Button
     		android:id="@+id/search_button"
     		android:layout_height="wrap_content"
     		android:layout_width="fill_parent"
     		android:text="@string/search_button_label"
     		android:onClick="selfDestruct"/>
    <Button
     		android:id="@+id/list_button"
     		android:layout_height="wrap_content"
     		android:layout_width="fill_parent"
     		android:text="@string/list_button_label"
     		android:onClick="selfDestruct"/>
    <Button
     		android:id="@+id/about_button"
     		android:layout_height="wrap_content"
     		android:layout_width="fill_parent"
     		android:text="@string/about_button_label"
     		android:onClick="selfDestruct"/>
    
</LinearLayout>
