<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
            android:id="@+id/building"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_instructions"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="5dip" />
    <TextView
            android:id="@+id/definition"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_instructions"
            android:layout_marginLeft="10dip" />
    <TextView 
        	android:id="@+id/description"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip" />
    <TextView 
        	android:id="@+id/abbr"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip" />
     <TextView 
        	android:id="@+id/common"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip" />
     <Button
     		android:id="@+id/go_button"
     		android:layout_height="wrap_content"
     		android:layout_width="wrap_content"
     		android:text="@string/button_label"
     		android:onClick="selfDestruct"
     		android:width="400dip" />    
    <ImageView 
        	android:id="@+id/photo"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/image_label"/>

</LinearLayout>
